adding jquery functionalities like hide and show

--- a/index.html
+++ b/index.html
@@ -78,38 +78,38 @@
   <div class="portfolio">
     <h2>PORTFOLIO</h2>
     <div class="row" id="portfolio">
-      <div class="col-md-3" id="work1">
-        <img src="images/portfolio/work4.jpg" alt="work1" >
+      <div class="col-md-3" id="portfolio1">
+        <img src="images/portfolio/work4.jpg" alt="portfolio1" >
         <p id="overlay"class="text">Black Studio</p>
       </div>
-      <div class="col-md-3" id="work2">
-        <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
+      <div class="col-md-3" id="portfolio2">
+        <img src="images/portfolio/work3.jpg" alt="portfolio2" id="portfolio2">
         <p id="overlay2" class="text">Ontario Security</p>
       </div>
-      <div class="col-md-3" id="work3">
-        <img src="images/portfolio/work2.jpg" alt="work3">
+      <div class="col-md-3" id="portfolio3">
+        <img src="images/portfolio/work2.jpg" alt="portfolio">
         <p id="overlay3"class="text">Pyramids</p>
       </div>
-      <div class="col-md-3" id="work4">
-        <img src="images/portfolio/work1.jpg" alt="work4">
+      <div class="col-md-3" id="portfolio4">
+        <img src="images/portfolio/work1.jpg" alt="portfolio4">
         <p id="overlay4" class="text">Jim Carry</p>
       </div>
     </div>
     <div class="row" id="portfolio">
-        <div class="col-md-3" id="work5">
-          <img src="images/portfolio/work5.jpg" alt="work1">
+        <div class="col-md-3" id="portfolio5">
+          <img src="images/portfolio/work5.jpg" alt="portfolio1">
           <p id="overlay5" class="text">Have A Nice Day</p>
         </div>
-        <div class="col-md-3" id="work6">
-          <img src="images/portfolio/work6.jpg" alt="work2">
+        <div class="col-md-3" id="portfolio6">
+          <img src="images/portfolio/work6.jpg" alt="portfolio2">
           <p id="overlay6"class="text">Calculator</p>
         </div>
-        <div class="col-md-3" id="work7">
-          <img src="images/portfolio/work7.jpg" alt="work3">
+        <div class="col-md-3" id="portfolio7">
+          <img src="images/portfolio/work7.jpg" alt="portfolio3">
           <p id="overlay7" class="text">Burned</p>
         </div>
-        <div class="col-md-3" id="work8">
-          <img src="images/portfolio/work8.jpg" alt="work4">
+        <div class="col-md-3" id="portfolio8">
+          <img src="images/portfolio/work8.jpg" alt="portfolio4">
           <p id="overlay8" class="text">Giraffe Restaurant</p>
         </div>
       </div>
@@ -132,7 +132,7 @@
     
     </div>
       
-      <input id="submit_button" type="submit" value="submit" name="submit" >
+      <input type="image" name="submit" src="./images/submit1.png" width="10px" height="50px">
   </form>
  </div>
  <footer>
