--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h2 class="hd">WHAT WE DO</h2>
     <div class="row">
       <div class="col-md-4">
-        <div id="design">
+        <div id="design-content">
           <h2 class="hd-one">DESIGN</h2>
           <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
             <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div id="development">
+        <div id="development-content">
           <h2 class="hd-one">DEVELOPMENT</h2>
           <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
              <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div id="product">
+        <div id="product-content">
           <h2 class="hd-one">PRODUCT MANAGEMENT</h2>
           <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
           <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
@@ -151,7 +151,7 @@
 </footer>
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"e71bed4d6ae5a7c984dfe28b0","lid":"dbf7e27685","uniqueMethods":true}) })</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
   <script src="js/formvalidation.js"></script>
 </body>
 </html>
