adding jquery methods to the portfolio section

--- a/index.html
+++ b/index.html
@@ -80,37 +80,37 @@
     <div class="row" id="portfolio">
       <div class="col-md-3" id="portfolio1">
         <img src="images/portfolio/work4.jpg" alt="portfolio1" >
-        <p id="overlay"class="text">Black Studio</p>
+        <p id="m-hover1"class="text">Black Studio</p>
       </div>
       <div class="col-md-3" id="portfolio2">
-        <img src="images/portfolio/work3.jpg" alt="portfolio2" id="portfolio2">
-        <p id="overlay2" class="text">Ontario Security</p>
+        <img src="images/portfolio/work3.jpg" alt="portfolio2">
+        <p id="m-hover2" class="text">Ontario Security</p>
       </div>
       <div class="col-md-3" id="portfolio3">
-        <img src="images/portfolio/work2.jpg" alt="portfolio">
-        <p id="overlay3"class="text">Pyramids</p>
+        <img src="images/portfolio/work2.jpg" alt="portfolio3">
+        <p id="m-hover3"class="text">Pyramids</p>
       </div>
       <div class="col-md-3" id="portfolio4">
         <img src="images/portfolio/work1.jpg" alt="portfolio4">
-        <p id="overlay4" class="text">Jim Carry</p>
+        <p id="m-hover4" class="text">Jim Carry</p>
       </div>
     </div>
     <div class="row" id="portfolio">
         <div class="col-md-3" id="portfolio5">
-          <img src="images/portfolio/work5.jpg" alt="portfolio1">
-          <p id="overlay5" class="text">Have A Nice Day</p>
+          <img src="images/portfolio/work5.jpg" alt="portfolio5">
+          <p id="m-hover5" class="text">Have A Nice Day</p>
         </div>
         <div class="col-md-3" id="portfolio6">
-          <img src="images/portfolio/work6.jpg" alt="portfolio2">
-          <p id="overlay6"class="text">Calculator</p>
+          <img src="images/portfolio/work6.jpg" alt="portfolio6">
+          <p id="m-hover6"class="text">Calculator</p>
         </div>
         <div class="col-md-3" id="portfolio7">
-          <img src="images/portfolio/work7.jpg" alt="portfolio3">
+          <img src="images/portfolio/work7.jpg" alt="portfolio7">
           <p id="overlay7" class="text">Burned</p>
         </div>
         <div class="col-md-3" id="portfolio8">
-          <img src="images/portfolio/work8.jpg" alt="portfolio4">
-          <p id="overlay8" class="text">Giraffe Restaurant</p>
+          <img src="images/portfolio/work8.jpg" alt="portfolio8">
+          <p id="m-hover8" class="text">Giraffe Restaurant</p>
         </div>
       </div>
   </div> 
