--- a/index.html
+++ b/index.html
@@ -75,47 +75,63 @@
     </div>
   </div>
   
-  <div class="portfolio">
+  <div class="container-fluid portfolio">
     <h2>PORTFOLIO</h2>
-    <div class="row" id="portfolio">
-      <div class="col-md-3" id="portfolio1">
-        <img src="images/portfolio/work4.jpg" alt="portfolio1" >
-        <p id="m-hover1"class="text">Black Studio</p>
+    <div class="row">
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work4.jpg" alt="work1" class="portfolio1">
+        <div class="middle">
+          <div class="text">Black studio</div>
+        </div>
       </div>
-      <div class="col-md-3" id="portfolio2">
-        <img src="images/portfolio/work3.jpg" alt="portfolio2">
-        <p id="m-hover2" class="text">Ontario Security</p>
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work3.jpg" alt="work2" class="portfolio1">
+        <div class="middle">
+          <div class="text">Ontario Security</div>
+        </div>
       </div>
-      <div class="col-md-3" id="portfolio3">
-        <img src="images/portfolio/work2.jpg" alt="portfolio3">
-        <p id="m-hover3"class="text">Pyramids</p>
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work2.jpg" alt="work3" class="portfolio1">
+        <div class="middle">
+          <div class="text">Pyramids</div>
+        </div>
       </div>
-      <div class="col-md-3" id="portfolio4">
-        <img src="images/portfolio/work1.jpg" alt="portfolio4">
-        <p id="m-hover4" class="text">Jim Carry</p>
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work1.jpg" alt="work4" class="portfolio1">
+        <div class="middle">
+          <div class="text">Jim Carry</div>
+        </div>
       </div>
     </div>
-    <div class="row" id="portfolio">
-        <div class="col-md-3" id="portfolio5">
-          <img src="images/portfolio/work5.jpg" alt="portfolio5">
-          <p id="m-hover5" class="text">Have A Nice Day</p>
-        </div>
-        <div class="col-md-3" id="portfolio6">
-          <img src="images/portfolio/work6.jpg" alt="portfolio6">
-          <p id="m-hover6"class="text">Calculator</p>
-        </div>
-        <div class="col-md-3" id="portfolio7">
-          <img src="images/portfolio/work7.jpg" alt="portfolio7">
-          <p id="overlay7" class="text">Burned</p>
-        </div>
-        <div class="col-md-3" id="portfolio8">
-          <img src="images/portfolio/work8.jpg" alt="portfolio8">
-          <p id="m-hover8" class="text">Giraffe Restaurant</p>
+    <div class="row">
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work5.jpg" alt="work5" class="portfolio1">
+        <div class="middle">
+          <div class="text">Have a Nice Day</div>
         </div>
       </div>
-  </div> 
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work6.jpg" alt="work6" class="portfolio1">
+        <div class="middle">
+          <div class="text">Calculator</div>
+        </div>
+      </div>
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work7.jpg" alt="work7" class="portfolio1">
+        <div class="middle">
+          <div class="text">Burned</div>
+        </div>
+      </div>
+      <div class="col-md-3 portfolio1">
+        <img src="./images/portfolio/work8.jpg" alt="work8" class="portfolio1">
+        <div class="middle">
+          <div class="text">Giraffe Restaurant</div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container-fluid contact">
-    <h2>CONTACT US</h2>
+    <h2 style="text-align: center;">CONTACT US</h2>
  <div class="container form-format">
   
   <form id="contact_form" action="#" method="POST" name="myForm" onsubmit="return validate()" name="myForm">
@@ -147,7 +163,7 @@
   <img src="images/social_icons/flickr.png" alt="flickr">
   
   <p>DELANI STUDIO</p>
-  <p>2019</p>
+  <p>2020</p>
 </footer>
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"e71bed4d6ae5a7c984dfe28b0","lid":"dbf7e27685","uniqueMethods":true}) })</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
