adding mail chimp form

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <h2 style="text-align: center;">CONTACT US</h2>
  <div class="container form-format">
   
-  <form id="contact_form" action="#" method="POST" name="myForm" onsubmit="return validate()" name="myForm">
+  <form id="contact_form"  method="POST" name="myForm" onsubmit="return validate()" name="myForm">
     <div class="row">
       
       <input id="name-input" class="input" name="name-input" type="text" value="" size="30" placeholder="name....">
